// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render count and info correctly for a single expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $0.15
      </span>
      .
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add a new expense 
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render count and total info correctly for multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        5
      </span>
       
      expenses
       totalling 
      <span>
        $1.65
      </span>
      .
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add a new expense 
      </Link>
    </div>
  </div>
</div>
`;
